--- a/styles.css
+++ b/styles.css
@@ -1,49 +1,167 @@
+:root {
+    --main-color: #2443ed;
+    --secondary-color: #c8cef0;
+}
+
+
 body {
     margin: 0;
     padding: 0;
     font-family: sans-serif;
     background-color: #fff;
     font-size: 15px;
-    color: darkblue;
+    color: var(--main-color);
 }
 header {
-
+    height: 5rem;
+    background-color: var(--main-color);
 }
 /* section 1 */
 .section1 {
-    /* border: 3px solid red;
-        */
-            margin: 0 2rem 0 2rem;
-
+    /* margin: 0 2rem 0 2rem; */
+    padding: 0 10%;
 }
 .section1 h1 {
-    font-size: 2.5rem;
+    font-size: 3rem;
+    margin-top: 1em;
 }
 .section1 button {
-    width: 11rem;
-    height: 2rem;
+    width: 15rem;
+    height: 3rem;
     border-radius: 1.5rem;
     background-color: #fff;
-    border: 1px solid blue;
-    color: darkblue;
-    margin-bottom: 3rem;
+    border: 2px solid var(--main-color);
+    color: var(--main-color);
+    margin-bottom: 5em;
 }
 button:hover {
-    background-color: darkblue;
+    background-color: var(--main-color);
     color: #fff;
 }
 .container {
     /* border: 3px solid red; */
+    margin-top: 2em;  
     display: flex;
     gap: 1.5rem;
+    margin-bottom: 6rem;
 }
 .box1 {
     border-radius: 1rem;
     border: 2px solid black;
     padding: 1rem;
 }
+.box1 a {
+    text-decoration: none;
+}
+.box1 a:hover {
+    color: #000;
+    text-decoration: underline;
+}
+.box1:hover {
+    transform: translateY(-0.5rem);
+    transition: 0.5s
+}
 .box2 {
     border-radius: 1rem;  
     border: 2px solid black;
     padding: 1rem;
+}
+.box2 a {
+    text-decoration: none;
+}
+.box2 a:hover {
+    color: #000;
+    text-decoration: underline;
+}
+.box2:hover {
+    transform: translateY(-0.5rem);
+    transition: 0.5s
+}
+
+.background {
+   background-color: var(--secondary-color);
+   height: 100vh;
+   margin: 0;
+}
+.section2 {
+    padding: 0 10%;
+    margin: 0;
+}
+.section2 h1 {
+    font-size: 3rem;
+    padding-top: 6rem;
+    margin-bottom: 4rem;
+}
+.section2 p {
+    margin-bottom: 3rem;
+}
+.section2 button {
+    width: 15rem;
+    height: 3rem;
+    border-radius: 1.5rem;
+    background-color: var(--secondary-color);
+    border: 2px solid var(--main-color);
+    color: var(--main-color);
+    margin-bottom: 5em;
+}
+.section2 button:hover {
+    background-color: var(--main-color);
+    color: #fff;
+}
+
+
+.background2 {
+   background-color: var(--main-color);
+   height: 200vh;
+   margin: 0;
+   border: 3px solid var(--main-color);
+
+}
+.section3 {
+    color: #fff;
+    padding: 0 10%;
+    margin: 0;
+}
+.section3 h1 {
+    font-size: 3rem;
+    padding-top: 6rem;
+    margin-bottom: 2rem;
+}
+.section3 p {
+    margin-bottom: 4rem;
+}
+.section3 button {
+    width: 15rem;
+    height: 3rem;
+    border-radius: 1.5rem;
+    background-color: var(--main-color);
+    border: 2px solid #fff;
+    color: #fff;
+    margin-bottom: 5em;
+}
+.section3 button:hover {
+    background-color: #fff;
+    color: var(--main-color);
+}
+
+.container3 {
+    margin-top: 2em;  
+    display: flex;
+    gap: 1.5rem;
+    margin-bottom: 1rem;
+}
+.container4 {
+    display: flex;
+    gap: 1.5rem;
+    margin-bottom: 6rem;
+}
+.box3 {
+    border-radius: 1rem;  
+    border: 2px solid #fff;
+    padding: 1rem;
+}
+.box3:hover {
+    background-color: #fff;
+    color: var(--main-color);
+    transition: 0.3s;
 }
